ifelse(regexp(AC_ACVERSION,[^2\.[01][0-9]?[^0-9]*$]),-1,
  [AC_INIT(auctex,11.14,auc-tex@sunsite.dk)],
  [AC_INIT(auctex.spec)])

AC_SET_MAKE
AC_PROG_INSTALL
EMACS_PROG_EMACS
EMACS_CHECK_MULE

EMACS_PATH_PACKAGEDIR([tex-site],[auctex])
EMACS_PATH_LISPDIR([tex-site])

auctexdir=${lispdir_expanded}/auctex
AC_SUBST(auctexdir)

if test $EMACS_FLAVOR = "xemacs" -a $infodir = '${prefix}/info' ; then
   infodir='${packagedir}/info'
fi

TEX_INPUT_DIRS

AC_PATH_PROG(TEX, tex, :)
AC_PATH_PROG(MAKEINFO, makeinfo, :)
MAKEINFO_CHECK_MACROS(acronym env option)
AC_PATH_PROG(INSTALL_INFO, install-info, :, $PATH /usr/sbin /sbin)


AC_SHELL_QUOTIFY(prefix)
AC_SHELL_QUOTIFY(packagedir)
AC_SHELL_QUOTIFY(lispdir)
AC_SHELL_QUOTIFY(auctexdir)
AC_SHELL_QUOTIFY(infodir)
AC_SHELL_QUOTIFY(datadir)
AC_SHELL_QUOTIFY(EMACS)
AC_SHELL_QUOTIFY(INSTALL_INFO)
AC_SHELL_QUOTIFY(MAKEINFO)
AC_SHELL_QUOTIFY(TEX)

AC_OUTPUT(Makefile tex-site.el doc/Makefile)
cat >&2 <<EOF

Congratulations!  Configuration is complete.

Type "make" at the prompt to build AUCTeX
EOF
